@startuml

title __BAUM's Class Diagram__\n

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.ApfelBaum {
          {static} - anzahl : int
          + ApfelBaum()
          + getInfo()
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      abstract class com.wolda.Baum.Baum {
          - alter : int
          + Baum()
          + getAlter()
          {abstract} + getInfo()
          {abstract} + giessen()
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.BirnenBaum {
          {static} - anzahl : int
          + BirnenBaum()
          + getInfo()
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      class com.wolda.Baum.NadelBaum {
          {static} - anzahl : int
          - hoehe : double
          + NadelBaum()
          + getInfo()
          + giessen()
      }
    }
  }
  

  namespace com.wolda {
    namespace Baum {
      abstract class com.wolda.Baum.ObstBaum {
          - gattung : String
          - maxErtrag : int
          - obst : ArrayList<Obst>
          - typ : int
          - voll : boolean
          + ObstBaum()
          + getObst()
          + giessen()
          + removeObst()
          + setTyp()
          - addObst()
      }
    }
  }
  

  com.wolda.Baum.ApfelBaum -up-|> com.wolda.Baum.ObstBaum
  com.wolda.Baum.BirnenBaum -up-|> com.wolda.Baum.ObstBaum
  com.wolda.Baum.NadelBaum -up-|> com.wolda.Baum.Baum
  com.wolda.Baum.ObstBaum -up-|> com.wolda.Baum.Baum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
